# StreamDock

./: build.uf2  readme.md
background_service/: main.cpp  zbeulc.sln  zbeulc.vcxproj
background_service/Debug/: config.txt  vc143.idb  zbeulc.exe.recipe  zbeulc.ilk  zbeulc.vcxproj.FileListAbsolute.txt
background_service/Debug/zbeulc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  zbeulc.lastbuildstate
background_service/x64/Debug/: config.txt  vc143.idb  zbeulc.exe.recipe  zbeulc.ilk  zbeulc.vcxproj.FileListAbsolute.txt
background_service/x64/Debug/zbeulc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  zbeulc.lastbuildstate
background_service/x64/Release/: zbeulc.exe.recipe  zbeulc.iobj  zbeulc.ipdb  zbeulc.vcxproj.FileListAbsolute.txt
background_service/x64/Release/zbeulc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  (+1 more)
code_pico/: CMakeLists.txt  projet_nsi.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
firmware/: config.txt  configAuto.txt  pubspec.yaml
firmware/android/app/: build.gradle
firmware/ios/Runner/: Info.plist
firmware/ios/Runner.xcodeproj/: project.pbxproj
firmware/lib/: main.dart
firmware/linux/: CMakeLists.txt  my_application.cc
firmware/macos/Runner.xcodeproj/: project.pbxproj
firmware/web/: index.html
firmware/windows/: CMakeLists.txt
firmware/windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
